# input-plugin-allows-capturing-directly-from-OpenVR-SteamVR-mirror-surface-in-full-resolution

./: CMakeLists.txt  README.md  win-openvr.cpp
